--- a/campaign/templates/app/leads/leads-view.html
+++ b/campaign/templates/app/leads/leads-view.html
@@ -65,8 +65,8 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn btn-primary btn-outline btn-square h-10 w-10 min-h-10" title="Import Leads"><i class="fa-solid fa-file-import"></i></button>
-                <button class="btn btn-primary h-10 min-h-10 rounded-lg px-4 text-sm">Add Lead</button>
+                <a href="{% url 'add_leads' %}" class="btn btn-primary btn-outline btn-square h-10 w-10 min-h-10" title="Import Leads"><i class="fa-solid fa-file-import"></i></a>
+                <a href="{% url 'add_leads' %}" class="btn btn-primary h-10 min-h-10 rounded-lg px-4 text-sm">Add Lead</a>
             </div>
         </div>
 
